fixtures/errors/class_super_call_in_method.js
class Base {}
class Derived extends Base {
  method() {
    super();
  }
}
new Derived().method();
