fixtures/errors/class_super_call_in_method.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: super() is only valid inside derived constructors
 --> errors/class_super_call_in_method.js:4:5
4 |     super();
  |     ^^^^^

